fix width of menu

--- a/src/components/Styles/HomePage.scss
+++ b/src/components/Styles/HomePage.scss
@@ -149,6 +149,9 @@
 		@include sm {
 			margin-bottom: 1rem;
 		}
+		.css-o5s7vl {
+			width: 256px;
+		}
 		.css-k008qs {
 			height: 100vh !important;
 			@include sm {
