fix border radius of menu

--- a/src/components/Styles/HomePage.scss
+++ b/src/components/Styles/HomePage.scss
@@ -152,6 +152,7 @@
 		.css-o5s7vl {
 			width: 256px;
 			max-width: 100%;
+			border-radius: 0 !important;
 		}
 		.css-k008qs {
 			height: 100vh !important;
