--- a/src/components/Styles/HomePage.scss
+++ b/src/components/Styles/HomePage.scss
@@ -153,6 +153,9 @@
 			width: 256px;
 			max-width: 100%;
 			border-radius: 0 !important;
+			@include sm {
+				width: 100%;
+			}
 		}
 		.css-k008qs {
 			height: 100vh !important;
